--- a/resources/sass/foundation/_setting.scss
+++ b/resources/sass/foundation/_setting.scss
@@ -42,14 +42,13 @@ $lhBaseSp: 1.38;
 $lhBasePc: 1.62;
 $lhTitle: 1.4;
 
-// カラー
-// $colorBase: #2b2b2b;
+
 // Body
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+$font-family-sans-serif: "Nunito", sans-serif;
+$font-size-base: .9rem;
 $line-height-base: 1.6;
 
 // Colors
@@ -63,3 +62,42 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+.blue {
+  color: $blue;
+}
+.indigo {
+  color: $indigo;
+}
+.purple {
+  color: $purple;
+}
+.pink {
+  color: $pink;
+}
+.red {
+  color: $red;
+}
+.orange {
+  color: $orange;
+}
+.yellow {
+  color: $yellow;
+}
+.green {
+  color: $green;
+}
+.teal {
+  color: $teal;
+}
+.cyan {
+  color: $cyan;
+}
+
+// Body
+$body-bg: #f8fafc;
+
+// Typography
+$font-family-sans-serif: "Nunito", sans-serif;
+$font-size-base: .9rem;
+$line-height-base: 1.6;
+$fa-font-path: "../webfonts";
